--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <ul>
                                 <li><img src="img/contact1.png" alt=""><strong>전화:&nbsp;</strong> <span>010-3773-9436</span></li>
                                 <li><img src="img/contact2.png" alt=""><strong>팩스:&nbsp;</strong> <span>031-572-9436</span></li>
-                                <li class="no-margin"><img src="img/contact3.png" alt=""><strong>메일:&nbsp;</strong><span> &nbsp;eonil9436@naver.com</span></li>
+                                <li class="no-margin"><img src="img/contact3.png" alt=""><strong>메일:&nbsp;</strong><span> &nbsp;seonil9436@naver.com</span></li>
                             </ul>
                         </li>
                     </ul>
@@ -83,7 +83,7 @@
     <div class="footer-wrap">
     <footer>
         (주)건우가설재 대표:선병길 <br>
-        전화번호:010-3773-9436 팩스:031-572-9456 <br>
+        전화번호:010-3773-9436 팩스:031-572-9436 <br>
         EMAIL:seonil9436@naver.com
     </footer>
     </div>
