--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="adress"><img src="img/place.png" alt="">경기도 남양주시 진전읍 연평리 781</p>
+                    <p class="adress"><img src="img/place.png" alt="">경기도 남양주시 진접읍 연평리 781</p>
                 </li>
 
             </ul>
